--- a/temp.html
+++ b/temp.html
@@ -1,41 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Counter</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1.2em;
-      cursor: pointer;
-    }
-
-    #counter {
-      font-size: 2em;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Counter</h1>
-  <button id="buton">Press</button>
-  <div id="counter">0</div>
-
-  <script>
-    // Butona basılma sayacı
-    let basmaSayisi = 0;
-
-    // Butona basılma işlemi
-    document.getElementById('buton').addEventListener('click', function() {
-      basmaSayisi++;
-      document.getElementById('counter').textContent = basmaSayisi;
-    });
-  </script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Combined Page</title>
+  <style>
+    /* CSS Stilleri */
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    #calculator {
+      margin: 20px auto;
+      width: 300px;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+  <div id="saat"></div>
+  <div id="calculator">
+    <h2>Body Mass Index Calculator</h2>
+    <label for="height">Height (metre):</label>
+    <input type="number" id="height" step="0.01" placeholder="ex: 1.75" required><br><br>
+    <label for="weight">Weight (kg):</label>
+    <input type="number" id="weight" step="0.1" placeholder="ex: 70" required><br><br>
+    <button onclick="calculateBMI()">Calculate</button><br><br>
+    <p id="result"></p>
+  </div>
+
+  <div id="dynamicContent">
+    <!-- Buraya ikinci HTML dosyasÄ±nÄ±n iÃ§eriÄŸini yerleÅŸtirin -->
+    <h1>Hi mert, Welcome!</h1>
+    <p>Client's IP address: 127.0.0.1</p>
+    <p>Client's Port Number: 56440</p>
+  </div>
+
+  <script>
+    // JavaScript kodlarÄ±
+    function calculateBMI() {
+      var height = parseFloat(document.getElementById('height').value);
+      var weight = parseFloat(document.getElementById('weight').value);
+
+      if (height > 0 && weight > 0) {
+        var bmi = weight / (height * height);
+        document.getElementById('result').innerHTML = 'Body Mass Index (BMI): ' + bmi.toFixed(2);
+      } else {
+        document.getElementById('result').innerHTML = 'Please enter valid height and weight values.';
+      }
+    }
+    function saatGoster() {
+      const simdi = new Date();
+      const saat = simdi.getHours();
+      const dakika = simdi.getMinutes();
+      const saniye = simdi.getSeconds();
+
+      const saatHTML = document.getElementById('saat');
+      saatHTML.textContent = `${saat.toString().padStart(2, '0')}:${dakika.toString().padStart(2, '0')}:${saniye.toString().padStart(2, '0')}`;
+    }
+
+    // Her saniye saatGoster fonksiyonunu Ã§aÄŸÄ±rarak saati gÃ¼nceller.
+    setInterval(saatGoster, 1000);
+
+    // Sayfa yÃ¼klendiÄŸinde saatGoster fonksiyonunu ilk kez Ã§aÄŸÄ±r.
+    saatGoster();
+  </script>
+</body>
 </html>
